# fractals

./: CMakeLists.txt  sierpinski.c  sierpinski.h
glad/include/glad/: glad.h
glad/src/: glad.c
lib/: CMakeLists.txt  geometry.h  sierpinski.c  sierpinski.h
shaders/: sierpinski.frag  sierpinski.vert
src/: CMakeLists.txt  geometry.c  geometry.h  main.c  renderer.c  renderer.h  shader.c  shader.h  sierpinski.c  sierpinski.h  sierpinskirenderer.c  sierpinskirenderer.h  utils.c  utils.h
utils/: utils.c  utils.h
